src/Pudding/Surface/Happy.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from src/Pudding/Surface/Happy.y
-----------------------------------------------------------------------------


rule 8 is unused

terminal '|' is unused
terminal '&' is unused
terminal '=:' is unused
terminal '??' is unused
terminal '?=' is unused
terminal '=?' is unused
terminal CNAME is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseExpr -> expr                           (0)
	%start_parseExprInParens -> exprInParens           (1)
	%start_parseRecordInBraces -> recordInBraces       (2)
	%start_parseBinderInner -> binderInner             (3)
	%start_parseImplicits -> implicits                 (4)
	VariableName -> VNAME                              (5)
	ModuleName -> MNAME                                (6)
	QualifiedOp -> ONAME                               (7)
	Command -> CNAME                                   (8)
	Number -> NUM                                      (9)
	Parens -> PARENS                                   (10)
	Braces -> BRACES                                   (11)
	Implicits -> IMPLICITS                             (12)
	expr -> exprAscribe                                (13)
	exprAscribe -> exprSentence                        (14)
	exprAscribe -> exprSentence ':' exprAscribe        (15)
	exprSentence -> exprTrailing                       (16)
	exprSentence -> '%' exprTrailing                   (17)
	exprSentence -> someAux__wordAtom__ word__exprTrailing__   (18)
	wordAtom -> word__exprAtom__                       (19)
	implicits -> commas__implicit__                    (20)
	implicit -> VariableName ':=' expr                 (21)
	implicit -> expr                                   (22)
	exprTrailing -> exprAtom                           (23)
	exprTrailing -> 'λ' binders '.' expr               (24)
	exprTrailing -> 'Π' binders '.' expr               (25)
	exprTrailing -> 'Σ' binders '.' expr               (26)
	exprAtom -> Parens                                 (27)
	exprAtom -> Braces                                 (28)
	exprAtom -> var                                    (29)
	exprAtom -> num                                    (30)
	exprAtom -> 'Type'                                 (31)
	exprAtom -> ModuleName                             (32)
	exprInParens -> expr                               (33)
	exprInParens -> expr ':=' expr                     (34)
	recordInBraces -> commas1__recordTy__              (35)
	recordInBraces -> commas__recordTm__               (36)
	recordTy -> VariableName ':' expr                  (37)
	recordTm -> VariableName ':=' expr                 (38)
	var -> VariableName                                (39)
	varOrNot -> var                                    (40)
	varOrNot -> '_'                                    (41)
	num -> Number                                      (42)
	binders -> some__binder__                          (43)
	binder -> varOrNot                                 (44)
	binder -> Parens                                   (45)
	binder -> Braces                                   (46)
	binderInner -> some__varOrNot__                    (47)
	binderInner -> some__varOrNot__ ':' expr           (48)
	commas__implicit__ -> commas1__implicit__ ','      (49)
	commas__implicit__ -> commas1__implicit__          (50)
	commas__implicit__ ->                              (51)
	commas__implicit__ -> ','                          (52)
	commas__recordTm__ -> commas1__recordTm__ ','      (53)
	commas__recordTm__ -> commas1__recordTm__          (54)
	commas__recordTm__ ->                              (55)
	commas__recordTm__ -> ','                          (56)
	commas1__recordTy__ -> recordTy                    (57)
	commas1__recordTy__ -> recordTy ',' commas1__recordTy__   (58)
	some__binder__ -> someAux__binder__                (59)
	some__varOrNot__ -> someAux__varOrNot__            (60)
	someAux__wordAtom__ -> wordAtom                    (61)
	someAux__wordAtom__ -> someAux__wordAtom__ wordAtom   (62)
	word__exprAtom__ -> QualifiedOp                    (63)
	word__exprAtom__ -> Implicits                      (64)
	word__exprAtom__ -> exprAtom                       (65)
	word__exprTrailing__ -> QualifiedOp                (66)
	word__exprTrailing__ -> Implicits                  (67)
	word__exprTrailing__ -> exprTrailing               (68)
	commas1__implicit__ -> implicit                    (69)
	commas1__implicit__ -> implicit ',' commas1__implicit__   (70)
	commas1__recordTm__ -> recordTm                    (71)
	commas1__recordTm__ -> recordTm ',' commas1__recordTm__   (72)
	someAux__binder__ -> binder                        (73)
	someAux__binder__ -> someAux__binder__ binder      (74)
	someAux__varOrNot__ -> varOrNot                    (75)
	someAux__varOrNot__ -> someAux__varOrNot__ varOrNot   (76)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'λ'            { Token _ (Syntax SLambda) }
	'Π'            { Token _ (Syntax SPi) }
	'Σ'            { Token _ (Syntax SSigma) }
	','            { Token _ (Syntax SComma) }
	'|'            { Token _ (Syntax SDisj) }
	'&'            { Token _ (Syntax SConj) }
	':'            { Token _ (Syntax SAscribe) }
	':='           { Token _ (Syntax SAssignL) }
	'=:'           { Token _ (Syntax SAssignR) }
	'??'           { Token _ (Syntax SInspect) }
	'?='           { Token _ (Syntax SMatchL) }
	'=?'           { Token _ (Syntax SMatchR) }
	'.'            { Token _ (Syntax SPeriod) }
	'_'            { Token _ (Syntax SPlaceholder) }
	'%'            { Token _ (Content (QualifiedOp (PlainOp [] "%"))) }
	'Type'         { Token _ (Content Univ) }
	VNAME          { Token _ (Content (VariableName _ _)) }
	MNAME          { Token _ (Content (ModuleName _)) }
	ONAME          { Token _ (Content (QualifiedOp _)) }
	CNAME          { Token _ (Content (Command _ _)) }
	NUM            { Token _ (Content (Number _)) }
	PARENS         { Token _ (Content (Parens _)) }
	BRACES         { Token _ (Content (Braces _)) }
	IMPLICITS      { Token _ (Content (Implicits _)) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseExpr rule  0
	%start_parseExprInParens rule  1
	%start_parseRecordInBraces rule  2
	%start_parseBinderInner rule  3
	%start_parseImplicits rule  4
	VariableName    rule  5
	ModuleName      rule  6
	QualifiedOp     rule  7
	Command         rule  8
	Number          rule  9
	Parens          rule  10
	Braces          rule  11
	Implicits       rule  12
	expr            rule  13
	exprAscribe     rules 14, 15
	exprSentence    rules 16, 17, 18
	wordAtom        rule  19
	implicits       rule  20
	implicit        rules 21, 22
	exprTrailing    rules 23, 24, 25, 26
	exprAtom        rules 27, 28, 29, 30, 31, 32
	exprInParens    rules 33, 34
	recordInBraces  rules 35, 36
	recordTy        rule  37
	recordTm        rule  38
	var             rule  39
	varOrNot        rules 40, 41
	num             rule  42
	binders         rule  43
	binder          rules 44, 45, 46
	binderInner     rules 47, 48
	commas__implicit__ rules 49, 50, 51, 52
	commas__recordTm__ rules 53, 54, 55, 56
	commas1__recordTy__ rules 57, 58
	some__binder__  rule  59
	some__varOrNot__ rule  60
	someAux__wordAtom__ rules 61, 62
	word__exprAtom__ rules 63, 64, 65
	word__exprTrailing__ rules 66, 67, 68
	commas1__implicit__ rules 69, 70
	commas1__recordTm__ rules 71, 72
	someAux__binder__ rules 73, 74
	someAux__varOrNot__ rules 75, 76

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseExpr -> . expr                          (rule 0)

	'λ'            shift, and enter state 28
	'Π'            shift, and enter state 29
	'Σ'            shift, and enter state 30
	'%'            shift, and enter state 32
	'Type'         shift, and enter state 33
	VNAME          shift, and enter state 6
	MNAME          shift, and enter state 34
	ONAME          shift, and enter state 35
	NUM            shift, and enter state 36
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38
	IMPLICITS      shift, and enter state 39

	VariableName   goto state 40
	ModuleName     goto state 8
	QualifiedOp    goto state 9
	Number         goto state 10
	Parens         goto state 11
	Braces         goto state 12
	Implicits      goto state 13
	expr           goto state 57
	exprAscribe    goto state 15
	exprSentence   goto state 16
	wordAtom       goto state 17
	exprTrailing   goto state 20
	exprAtom       goto state 21
	var            goto state 22
	num            goto state 23
	someAux__wordAtom__goto state 25
	word__exprAtom__goto state 26

State 1

	%start_parseExprInParens -> . exprInParens          (rule 1)

	'λ'            shift, and enter state 28
	'Π'            shift, and enter state 29
	'Σ'            shift, and enter state 30
	'%'            shift, and enter state 32
	'Type'         shift, and enter state 33
	VNAME          shift, and enter state 6
	MNAME          shift, and enter state 34
	ONAME          shift, and enter state 35
	NUM            shift, and enter state 36
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38
	IMPLICITS      shift, and enter state 39

	VariableName   goto state 40
	ModuleName     goto state 8
	QualifiedOp    goto state 9
	Number         goto state 10
	Parens         goto state 11
	Braces         goto state 12
	Implicits      goto state 13
	expr           goto state 55
	exprAscribe    goto state 15
	exprSentence   goto state 16
	wordAtom       goto state 17
	exprTrailing   goto state 20
	exprAtom       goto state 21
	exprInParens   goto state 56
	var            goto state 22
	num            goto state 23
	someAux__wordAtom__goto state 25
	word__exprAtom__goto state 26

State 2

	%start_parseRecordInBraces -> . recordInBraces      (rule 2)

	','            shift, and enter state 54
	VNAME          shift, and enter state 6
	%eof           reduce using rule 55

	VariableName   goto state 47
	recordInBraces goto state 48
	recordTy       goto state 49
	recordTm       goto state 50
	commas__recordTm__goto state 51
	commas1__recordTy__goto state 52
	commas1__recordTm__goto state 53

State 3

	%start_parseBinderInner -> . binderInner            (rule 3)

	'_'            shift, and enter state 46
	VNAME          shift, and enter state 6

	VariableName   goto state 40
	var            goto state 41
	varOrNot       goto state 42
	binderInner    goto state 43
	some__varOrNot__goto state 44
	someAux__varOrNot__goto state 45

State 4

	%start_parseImplicits -> . implicits                (rule 4)

	'λ'            shift, and enter state 28
	'Π'            shift, and enter state 29
	'Σ'            shift, and enter state 30
	','            shift, and enter state 31
	'%'            shift, and enter state 32
	'Type'         shift, and enter state 33
	VNAME          shift, and enter state 6
	MNAME          shift, and enter state 34
	ONAME          shift, and enter state 35
	NUM            shift, and enter state 36
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38
	IMPLICITS      shift, and enter state 39
	%eof           reduce using rule 51

	VariableName   goto state 7
	ModuleName     goto state 8
	QualifiedOp    goto state 9
	Number         goto state 10
	Parens         goto state 11
	Braces         goto state 12
	Implicits      goto state 13
	expr           goto state 14
	exprAscribe    goto state 15
	exprSentence   goto state 16
	wordAtom       goto state 17
	implicits      goto state 18
	implicit       goto state 19
	exprTrailing   goto state 20
	exprAtom       goto state 21
	var            goto state 22
	num            goto state 23
	commas__implicit__goto state 24
	someAux__wordAtom__goto state 25
	word__exprAtom__goto state 26
	commas1__implicit__goto state 27

State 5

	VariableName -> . VNAME                             (rule 5)

	VNAME          shift, and enter state 6


State 6

	VariableName -> VNAME .                             (rule 5)

	'λ'            reduce using rule 5
	'Π'            reduce using rule 5
	'Σ'            reduce using rule 5
	','            reduce using rule 5
	':'            reduce using rule 5
	':='           reduce using rule 5
	'.'            reduce using rule 5
	'_'            reduce using rule 5
	'Type'         reduce using rule 5
	VNAME          reduce using rule 5
	MNAME          reduce using rule 5
	ONAME          reduce using rule 5
	NUM            reduce using rule 5
	PARENS         reduce using rule 5
	BRACES         reduce using rule 5
	IMPLICITS      reduce using rule 5
	%eof           reduce using rule 5


State 7

	implicit -> VariableName . ':=' expr                (rule 21)
	var -> VariableName .                               (rule 39)

	'λ'            reduce using rule 39
	'Π'            reduce using rule 39
	'Σ'            reduce using rule 39
	','            reduce using rule 39
	':'            reduce using rule 39
	':='           shift, and enter state 85
	'Type'         reduce using rule 39
	VNAME          reduce using rule 39
	MNAME          reduce using rule 39
	ONAME          reduce using rule 39
	NUM            reduce using rule 39
	PARENS         reduce using rule 39
	BRACES         reduce using rule 39
	IMPLICITS      reduce using rule 39
	%eof           reduce using rule 39


State 8

	exprAtom -> ModuleName .                            (rule 32)

	'λ'            reduce using rule 32
	'Π'            reduce using rule 32
	'Σ'            reduce using rule 32
	','            reduce using rule 32
	':'            reduce using rule 32
	':='           reduce using rule 32
	'Type'         reduce using rule 32
	VNAME          reduce using rule 32
	MNAME          reduce using rule 32
	ONAME          reduce using rule 32
	NUM            reduce using rule 32
	PARENS         reduce using rule 32
	BRACES         reduce using rule 32
	IMPLICITS      reduce using rule 32
	%eof           reduce using rule 32


State 9

	word__exprAtom__ -> QualifiedOp .                   (rule 63)

	'λ'            reduce using rule 63
	'Π'            reduce using rule 63
	'Σ'            reduce using rule 63
	'Type'         reduce using rule 63
	VNAME          reduce using rule 63
	MNAME          reduce using rule 63
	ONAME          reduce using rule 63
	NUM            reduce using rule 63
	PARENS         reduce using rule 63
	BRACES         reduce using rule 63
	IMPLICITS      reduce using rule 63


State 10

	num -> Number .                                     (rule 42)

	'λ'            reduce using rule 42
	'Π'            reduce using rule 42
	'Σ'            reduce using rule 42
	','            reduce using rule 42
	':'            reduce using rule 42
	':='           reduce using rule 42
	'Type'         reduce using rule 42
	VNAME          reduce using rule 42
	MNAME          reduce using rule 42
	ONAME          reduce using rule 42
	NUM            reduce using rule 42
	PARENS         reduce using rule 42
	BRACES         reduce using rule 42
	IMPLICITS      reduce using rule 42
	%eof           reduce using rule 42


State 11

	exprAtom -> Parens .                                (rule 27)

	'λ'            reduce using rule 27
	'Π'            reduce using rule 27
	'Σ'            reduce using rule 27
	','            reduce using rule 27
	':'            reduce using rule 27
	':='           reduce using rule 27
	'Type'         reduce using rule 27
	VNAME          reduce using rule 27
	MNAME          reduce using rule 27
	ONAME          reduce using rule 27
	NUM            reduce using rule 27
	PARENS         reduce using rule 27
	BRACES         reduce using rule 27
	IMPLICITS      reduce using rule 27
	%eof           reduce using rule 27


State 12

	exprAtom -> Braces .                                (rule 28)

	'λ'            reduce using rule 28
	'Π'            reduce using rule 28
	'Σ'            reduce using rule 28
	','            reduce using rule 28
	':'            reduce using rule 28
	':='           reduce using rule 28
	'Type'         reduce using rule 28
	VNAME          reduce using rule 28
	MNAME          reduce using rule 28
	ONAME          reduce using rule 28
	NUM            reduce using rule 28
	PARENS         reduce using rule 28
	BRACES         reduce using rule 28
	IMPLICITS      reduce using rule 28
	%eof           reduce using rule 28


State 13

	word__exprAtom__ -> Implicits .                     (rule 64)

	'λ'            reduce using rule 64
	'Π'            reduce using rule 64
	'Σ'            reduce using rule 64
	'Type'         reduce using rule 64
	VNAME          reduce using rule 64
	MNAME          reduce using rule 64
	ONAME          reduce using rule 64
	NUM            reduce using rule 64
	PARENS         reduce using rule 64
	BRACES         reduce using rule 64
	IMPLICITS      reduce using rule 64


State 14

	implicit -> expr .                                  (rule 22)

	','            reduce using rule 22
	%eof           reduce using rule 22


State 15

	expr -> exprAscribe .                               (rule 13)

	','            reduce using rule 13
	':'            reduce using rule 13
	':='           reduce using rule 13
	%eof           reduce using rule 13


State 16

	exprAscribe -> exprSentence .                       (rule 14)
	exprAscribe -> exprSentence . ':' exprAscribe       (rule 15)

	','            reduce using rule 14
	':'            shift, and enter state 84
	':='           reduce using rule 14
	%eof           reduce using rule 14


State 17

	someAux__wordAtom__ -> wordAtom .                   (rule 61)

	'λ'            reduce using rule 61
	'Π'            reduce using rule 61
	'Σ'            reduce using rule 61
	'Type'         reduce using rule 61
	VNAME          reduce using rule 61
	MNAME          reduce using rule 61
	ONAME          reduce using rule 61
	NUM            reduce using rule 61
	PARENS         reduce using rule 61
	BRACES         reduce using rule 61
	IMPLICITS      reduce using rule 61


State 18

	%start_parseImplicits -> implicits .                (rule 4)

	%eof           accept


State 19

	commas1__implicit__ -> implicit .                   (rule 69)
	commas1__implicit__ -> implicit . ',' commas1__implicit__    (rule 70)

	','            shift, and enter state 83
	%eof           reduce using rule 69


State 20

	exprSentence -> exprTrailing .                      (rule 16)

	','            reduce using rule 16
	':'            reduce using rule 16
	':='           reduce using rule 16
	%eof           reduce using rule 16


State 21

	exprTrailing -> exprAtom .                          (rule 23)
	word__exprAtom__ -> exprAtom .                      (rule 65)

	'λ'            reduce using rule 65
	'Π'            reduce using rule 65
	'Σ'            reduce using rule 65
	','            reduce using rule 23
	':'            reduce using rule 23
	':='           reduce using rule 23
	'Type'         reduce using rule 65
	VNAME          reduce using rule 65
	MNAME          reduce using rule 65
	ONAME          reduce using rule 65
	NUM            reduce using rule 65
	PARENS         reduce using rule 65
	BRACES         reduce using rule 65
	IMPLICITS      reduce using rule 65
	%eof           reduce using rule 23


State 22

	exprAtom -> var .                                   (rule 29)

	'λ'            reduce using rule 29
	'Π'            reduce using rule 29
	'Σ'            reduce using rule 29
	','            reduce using rule 29
	':'            reduce using rule 29
	':='           reduce using rule 29
	'Type'         reduce using rule 29
	VNAME          reduce using rule 29
	MNAME          reduce using rule 29
	ONAME          reduce using rule 29
	NUM            reduce using rule 29
	PARENS         reduce using rule 29
	BRACES         reduce using rule 29
	IMPLICITS      reduce using rule 29
	%eof           reduce using rule 29


State 23

	exprAtom -> num .                                   (rule 30)

	'λ'            reduce using rule 30
	'Π'            reduce using rule 30
	'Σ'            reduce using rule 30
	','            reduce using rule 30
	':'            reduce using rule 30
	':='           reduce using rule 30
	'Type'         reduce using rule 30
	VNAME          reduce using rule 30
	MNAME          reduce using rule 30
	ONAME          reduce using rule 30
	NUM            reduce using rule 30
	PARENS         reduce using rule 30
	BRACES         reduce using rule 30
	IMPLICITS      reduce using rule 30
	%eof           reduce using rule 30


State 24

	implicits -> commas__implicit__ .                   (rule 20)

	%eof           reduce using rule 20


State 25

	exprSentence -> someAux__wordAtom__ . word__exprTrailing__    (rule 18)
	someAux__wordAtom__ -> someAux__wordAtom__ . wordAtom    (rule 62)

	'λ'            shift, and enter state 28
	'Π'            shift, and enter state 29
	'Σ'            shift, and enter state 30
	'Type'         shift, and enter state 33
	VNAME          shift, and enter state 6
	MNAME          shift, and enter state 34
	ONAME          shift, and enter state 35
	NUM            shift, and enter state 36
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38
	IMPLICITS      shift, and enter state 39

	VariableName   goto state 40
	ModuleName     goto state 8
	QualifiedOp    goto state 78
	Number         goto state 10
	Parens         goto state 11
	Braces         goto state 12
	Implicits      goto state 79
	wordAtom       goto state 80
	exprTrailing   goto state 81
	exprAtom       goto state 21
	var            goto state 22
	num            goto state 23
	word__exprAtom__goto state 26
	word__exprTrailing__goto state 82

State 26

	wordAtom -> word__exprAtom__ .                      (rule 19)

	'λ'            reduce using rule 19
	'Π'            reduce using rule 19
	'Σ'            reduce using rule 19
	'Type'         reduce using rule 19
	VNAME          reduce using rule 19
	MNAME          reduce using rule 19
	ONAME          reduce using rule 19
	NUM            reduce using rule 19
	PARENS         reduce using rule 19
	BRACES         reduce using rule 19
	IMPLICITS      reduce using rule 19


State 27

	commas__implicit__ -> commas1__implicit__ . ','     (rule 49)
	commas__implicit__ -> commas1__implicit__ .         (rule 50)

	','            shift, and enter state 77
	%eof           reduce using rule 50


State 28

	exprTrailing -> 'λ' . binders '.' expr              (rule 24)

	'_'            shift, and enter state 46
	VNAME          shift, and enter state 6
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38

	VariableName   goto state 40
	Parens         goto state 68
	Braces         goto state 69
	var            goto state 41
	varOrNot       goto state 70
	binders        goto state 76
	binder         goto state 72
	some__binder__ goto state 73
	someAux__binder__goto state 74

State 29

	exprTrailing -> 'Π' . binders '.' expr              (rule 25)

	'_'            shift, and enter state 46
	VNAME          shift, and enter state 6
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38

	VariableName   goto state 40
	Parens         goto state 68
	Braces         goto state 69
	var            goto state 41
	varOrNot       goto state 70
	binders        goto state 75
	binder         goto state 72
	some__binder__ goto state 73
	someAux__binder__goto state 74

State 30

	exprTrailing -> 'Σ' . binders '.' expr              (rule 26)

	'_'            shift, and enter state 46
	VNAME          shift, and enter state 6
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38

	VariableName   goto state 40
	Parens         goto state 68
	Braces         goto state 69
	var            goto state 41
	varOrNot       goto state 70
	binders        goto state 71
	binder         goto state 72
	some__binder__ goto state 73
	someAux__binder__goto state 74

State 31

	commas__implicit__ -> ',' .                         (rule 52)

	%eof           reduce using rule 52


State 32

	exprSentence -> '%' . exprTrailing                  (rule 17)

	'λ'            shift, and enter state 28
	'Π'            shift, and enter state 29
	'Σ'            shift, and enter state 30
	'Type'         shift, and enter state 33
	VNAME          shift, and enter state 6
	MNAME          shift, and enter state 34
	NUM            shift, and enter state 36
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38

	VariableName   goto state 40
	ModuleName     goto state 8
	Number         goto state 10
	Parens         goto state 11
	Braces         goto state 12
	exprTrailing   goto state 66
	exprAtom       goto state 67
	var            goto state 22
	num            goto state 23

State 33

	exprAtom -> 'Type' .                                (rule 31)

	'λ'            reduce using rule 31
	'Π'            reduce using rule 31
	'Σ'            reduce using rule 31
	','            reduce using rule 31
	':'            reduce using rule 31
	':='           reduce using rule 31
	'Type'         reduce using rule 31
	VNAME          reduce using rule 31
	MNAME          reduce using rule 31
	ONAME          reduce using rule 31
	NUM            reduce using rule 31
	PARENS         reduce using rule 31
	BRACES         reduce using rule 31
	IMPLICITS      reduce using rule 31
	%eof           reduce using rule 31


State 34

	ModuleName -> MNAME .                               (rule 6)

	'λ'            reduce using rule 6
	'Π'            reduce using rule 6
	'Σ'            reduce using rule 6
	','            reduce using rule 6
	':'            reduce using rule 6
	':='           reduce using rule 6
	'Type'         reduce using rule 6
	VNAME          reduce using rule 6
	MNAME          reduce using rule 6
	ONAME          reduce using rule 6
	NUM            reduce using rule 6
	PARENS         reduce using rule 6
	BRACES         reduce using rule 6
	IMPLICITS      reduce using rule 6
	%eof           reduce using rule 6


State 35

	QualifiedOp -> ONAME .                              (rule 7)

	'λ'            reduce using rule 7
	'Π'            reduce using rule 7
	'Σ'            reduce using rule 7
	','            reduce using rule 7
	':'            reduce using rule 7
	':='           reduce using rule 7
	'Type'         reduce using rule 7
	VNAME          reduce using rule 7
	MNAME          reduce using rule 7
	ONAME          reduce using rule 7
	NUM            reduce using rule 7
	PARENS         reduce using rule 7
	BRACES         reduce using rule 7
	IMPLICITS      reduce using rule 7
	%eof           reduce using rule 7


State 36

	Number -> NUM .                                     (rule 9)

	'λ'            reduce using rule 9
	'Π'            reduce using rule 9
	'Σ'            reduce using rule 9
	','            reduce using rule 9
	':'            reduce using rule 9
	':='           reduce using rule 9
	'Type'         reduce using rule 9
	VNAME          reduce using rule 9
	MNAME          reduce using rule 9
	ONAME          reduce using rule 9
	NUM            reduce using rule 9
	PARENS         reduce using rule 9
	BRACES         reduce using rule 9
	IMPLICITS      reduce using rule 9
	%eof           reduce using rule 9


State 37

	Parens -> PARENS .                                  (rule 10)

	'λ'            reduce using rule 10
	'Π'            reduce using rule 10
	'Σ'            reduce using rule 10
	','            reduce using rule 10
	':'            reduce using rule 10
	':='           reduce using rule 10
	'.'            reduce using rule 10
	'_'            reduce using rule 10
	'Type'         reduce using rule 10
	VNAME          reduce using rule 10
	MNAME          reduce using rule 10
	ONAME          reduce using rule 10
	NUM            reduce using rule 10
	PARENS         reduce using rule 10
	BRACES         reduce using rule 10
	IMPLICITS      reduce using rule 10
	%eof           reduce using rule 10


State 38

	Braces -> BRACES .                                  (rule 11)

	'λ'            reduce using rule 11
	'Π'            reduce using rule 11
	'Σ'            reduce using rule 11
	','            reduce using rule 11
	':'            reduce using rule 11
	':='           reduce using rule 11
	'.'            reduce using rule 11
	'_'            reduce using rule 11
	'Type'         reduce using rule 11
	VNAME          reduce using rule 11
	MNAME          reduce using rule 11
	ONAME          reduce using rule 11
	NUM            reduce using rule 11
	PARENS         reduce using rule 11
	BRACES         reduce using rule 11
	IMPLICITS      reduce using rule 11
	%eof           reduce using rule 11


State 39

	Implicits -> IMPLICITS .                            (rule 12)

	'λ'            reduce using rule 12
	'Π'            reduce using rule 12
	'Σ'            reduce using rule 12
	','            reduce using rule 12
	':'            reduce using rule 12
	':='           reduce using rule 12
	'Type'         reduce using rule 12
	VNAME          reduce using rule 12
	MNAME          reduce using rule 12
	ONAME          reduce using rule 12
	NUM            reduce using rule 12
	PARENS         reduce using rule 12
	BRACES         reduce using rule 12
	IMPLICITS      reduce using rule 12
	%eof           reduce using rule 12


State 40

	var -> VariableName .                               (rule 39)

	'λ'            reduce using rule 39
	'Π'            reduce using rule 39
	'Σ'            reduce using rule 39
	','            reduce using rule 39
	':'            reduce using rule 39
	':='           reduce using rule 39
	'.'            reduce using rule 39
	'_'            reduce using rule 39
	'Type'         reduce using rule 39
	VNAME          reduce using rule 39
	MNAME          reduce using rule 39
	ONAME          reduce using rule 39
	NUM            reduce using rule 39
	PARENS         reduce using rule 39
	BRACES         reduce using rule 39
	IMPLICITS      reduce using rule 39
	%eof           reduce using rule 39


State 41

	varOrNot -> var .                                   (rule 40)

	':'            reduce using rule 40
	'.'            reduce using rule 40
	'_'            reduce using rule 40
	VNAME          reduce using rule 40
	PARENS         reduce using rule 40
	BRACES         reduce using rule 40
	%eof           reduce using rule 40


State 42

	someAux__varOrNot__ -> varOrNot .                   (rule 75)

	':'            reduce using rule 75
	'_'            reduce using rule 75
	VNAME          reduce using rule 75
	%eof           reduce using rule 75


State 43

	%start_parseBinderInner -> binderInner .            (rule 3)

	%eof           accept


State 44

	binderInner -> some__varOrNot__ .                   (rule 47)
	binderInner -> some__varOrNot__ . ':' expr          (rule 48)

	':'            shift, and enter state 65
	%eof           reduce using rule 47


State 45

	some__varOrNot__ -> someAux__varOrNot__ .           (rule 60)
	someAux__varOrNot__ -> someAux__varOrNot__ . varOrNot    (rule 76)

	':'            reduce using rule 60
	'_'            shift, and enter state 46
	VNAME          shift, and enter state 6
	%eof           reduce using rule 60

	VariableName   goto state 40
	var            goto state 41
	varOrNot       goto state 64

State 46

	varOrNot -> '_' .                                   (rule 41)

	':'            reduce using rule 41
	'.'            reduce using rule 41
	'_'            reduce using rule 41
	VNAME          reduce using rule 41
	PARENS         reduce using rule 41
	BRACES         reduce using rule 41
	%eof           reduce using rule 41


State 47

	recordTy -> VariableName . ':' expr                 (rule 37)
	recordTm -> VariableName . ':=' expr                (rule 38)

	':'            shift, and enter state 62
	':='           shift, and enter state 63


State 48

	%start_parseRecordInBraces -> recordInBraces .      (rule 2)

	%eof           accept


State 49

	commas1__recordTy__ -> recordTy .                   (rule 57)
	commas1__recordTy__ -> recordTy . ',' commas1__recordTy__    (rule 58)

	','            shift, and enter state 61
	%eof           reduce using rule 57


State 50

	commas1__recordTm__ -> recordTm .                   (rule 71)
	commas1__recordTm__ -> recordTm . ',' commas1__recordTm__    (rule 72)

	','            shift, and enter state 60
	%eof           reduce using rule 71


State 51

	recordInBraces -> commas__recordTm__ .              (rule 36)

	%eof           reduce using rule 36


State 52

	recordInBraces -> commas1__recordTy__ .             (rule 35)

	%eof           reduce using rule 35


State 53

	commas__recordTm__ -> commas1__recordTm__ . ','     (rule 53)
	commas__recordTm__ -> commas1__recordTm__ .         (rule 54)

	','            shift, and enter state 59
	%eof           reduce using rule 54


State 54

	commas__recordTm__ -> ',' .                         (rule 56)

	%eof           reduce using rule 56


State 55

	exprInParens -> expr .                              (rule 33)
	exprInParens -> expr . ':=' expr                    (rule 34)

	':='           shift, and enter state 58
	%eof           reduce using rule 33


State 56

	%start_parseExprInParens -> exprInParens .          (rule 1)

	%eof           accept


State 57

	%start_parseExpr -> expr .                          (rule 0)

	%eof           accept


State 58

	exprInParens -> expr ':=' . expr                    (rule 34)

	'λ'            shift, and enter state 28
	'Π'            shift, and enter state 29
	'Σ'            shift, and enter state 30
	'%'            shift, and enter state 32
	'Type'         shift, and enter state 33
	VNAME          shift, and enter state 6
	MNAME          shift, and enter state 34
	ONAME          shift, and enter state 35
	NUM            shift, and enter state 36
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38
	IMPLICITS      shift, and enter state 39

	VariableName   goto state 40
	ModuleName     goto state 8
	QualifiedOp    goto state 9
	Number         goto state 10
	Parens         goto state 11
	Braces         goto state 12
	Implicits      goto state 13
	expr           goto state 100
	exprAscribe    goto state 15
	exprSentence   goto state 16
	wordAtom       goto state 17
	exprTrailing   goto state 20
	exprAtom       goto state 21
	var            goto state 22
	num            goto state 23
	someAux__wordAtom__goto state 25
	word__exprAtom__goto state 26

State 59

	commas__recordTm__ -> commas1__recordTm__ ',' .     (rule 53)

	%eof           reduce using rule 53


State 60

	commas1__recordTm__ -> recordTm ',' . commas1__recordTm__    (rule 72)

	VNAME          shift, and enter state 6

	VariableName   goto state 98
	recordTm       goto state 50
	commas1__recordTm__goto state 99

State 61

	commas1__recordTy__ -> recordTy ',' . commas1__recordTy__    (rule 58)

	VNAME          shift, and enter state 6

	VariableName   goto state 96
	recordTy       goto state 49
	commas1__recordTy__goto state 97

State 62

	recordTy -> VariableName ':' . expr                 (rule 37)

	'λ'            shift, and enter state 28
	'Π'            shift, and enter state 29
	'Σ'            shift, and enter state 30
	'%'            shift, and enter state 32
	'Type'         shift, and enter state 33
	VNAME          shift, and enter state 6
	MNAME          shift, and enter state 34
	ONAME          shift, and enter state 35
	NUM            shift, and enter state 36
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38
	IMPLICITS      shift, and enter state 39

	VariableName   goto state 40
	ModuleName     goto state 8
	QualifiedOp    goto state 9
	Number         goto state 10
	Parens         goto state 11
	Braces         goto state 12
	Implicits      goto state 13
	expr           goto state 95
	exprAscribe    goto state 15
	exprSentence   goto state 16
	wordAtom       goto state 17
	exprTrailing   goto state 20
	exprAtom       goto state 21
	var            goto state 22
	num            goto state 23
	someAux__wordAtom__goto state 25
	word__exprAtom__goto state 26

State 63

	recordTm -> VariableName ':=' . expr                (rule 38)

	'λ'            shift, and enter state 28
	'Π'            shift, and enter state 29
	'Σ'            shift, and enter state 30
	'%'            shift, and enter state 32
	'Type'         shift, and enter state 33
	VNAME          shift, and enter state 6
	MNAME          shift, and enter state 34
	ONAME          shift, and enter state 35
	NUM            shift, and enter state 36
	PARENS         shift, and enter state 37
	BRACES         shift, and enter state 38
	IMPLICITS      shift, and enter state 39
